--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,50 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
 # Compiled output
 /dist
-/tmp
 /out-tsc
-/bazel-out
 
-# Node
+# Dependencies
 /node_modules
-npm-debug.log
-yarn-error.log
 
-# IDEs and editors
-.idea/
-.project
-.classpath
-.c9/
-*.launch
-.settings/
+# Angular-specific
+/.angular
+.angular-cache
+.angular
+
+# IDEs and Editors
+/.idea
+/.vscode
+*.sublime-project
 *.sublime-workspace
 
-# Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
-# Miscellaneous
-/.angular/cache
-.sass-cache/
-/connect.lock
-/coverage
-/libpeerconnection.log
-testem.log
-/typings
-
-# System files
+# Operating System files
 .DS_Store
 Thumbs.db
+
+# Environment files
+/src/environments/environment*.ts
+
+# Log files
+*.log
+
+# Local NPM cache
+.npm
+
+# Temporary files
+*.tmp
+*.swp
+*.swo
+
+# Optional npm cache directory
+/.npm
+
+# Yarn specific
+.yarn-cache
+.yarn-integrity
+
+# Project files
+*.lock
+package-lock.json
+yarn.lock
+
+# Build directory
+/build
